/**
 * AppManager
 * 
 * Central coordinator for tool registration, mounting, unmountin a
 * and switching within appshell slots.
 * 
 * Core responsibilities:
 * - Stores available tool classes in a registry
 * - Instantiates tools fr a given slot
 * - Controls the tool lifecycle (init, render, destroy)
 * - Tracks currently mounted tool instances per slot
 */

import { BaseTool } from "./BaseTool.js";

export class AppManager {
    constructor(appShell) {
        this.appShell = appShell;

        this.toolRegistry = new Map();
        this.mountedTools = new Map();
    }

    /**
     * Regestriert ein Tool mit einem eindeutigen Namen(string) und der Tool-Klasse 
     * Die Tool-Klasse muss von BaseTool erben und mindestens init() und render() implementieren
     * 
     * @param {string} toolName 
     * @param {typeof BaseTool} ToolClass 
     */
    registerTool(toolName, ToolClass) {
        if (!toolName || !ToolClass) {
            throw new Error("registerTool benötigt toolName und ToolClass.");
        }

        if ( !(ToolClass.prototype instanceof BaseTool) ) { // check if ToolClass extends BaseTool
            throw new Error(`ToolClass für "${toolName}" muss von BaseTool erben.`);
        }

        this.toolRegistry.set(toolName, ToolClass);
    }

    /**
     * 
     * @param {string} toolName 
     * @param {string} slotName
     */
    mountTool(toolName, slotName, config=null) {
        const ToolClass = this.toolRegistry.get(toolName);
        const $slot = this.appShell.getSlot(slotName);

        if (!ToolClass) {
            throw new Error(`Tool "${toolName}" ist nicht registriert.`);
        }

        if (!$slot) {
            throw new Error(`Slot "${slotName}" existiert nicht.`);
        }

        if (this.mountedTools.has(slotName)) {
            this.unmountTool(slotName);
        }

        const toolInstance = new ToolClass($slot, config); 


        if (typeof toolInstance.init === "function") {
            toolInstance.init();
        }

        if (typeof toolInstance.render === "function") {
            toolInstance.render();
        }

        this.mountedTools.set(slotName, {
            name: toolName,
            instance: toolInstance
        });

        return toolInstance;
    }

    unmountTool(slotName) {
        const mounted = this.mountedTools.get(slotName);
        if (!mounted) return;

        const { instance } = mounted;
        const $slot = this.appShell.getSlot(slotName);

        if (typeof instance.destroy === "function") {
            instance.destroy();
        }

        if ($slot) {
            $slot.empty();
        }
        this.mountedTools.delete(slotName);
    }

    switchTool(slotName, toolName, config=null) {
        this.unmountTool(slotName);
        return this.mountTool(toolName, slotName, config);
    }

    getMountedTool(slotName) {
        return this.mountedTools.get(slotName) || null;
    }
}